# GP1_DirectX

./: README.md
project/: CMakeLists.txt  CMakeSettings.json
project/project/: CMakeLists.txt
project/project/src/: Camera.h  ColorRGB.h  Effect.cpp  Effect.h  EffectDefault.h  EffectPartialCoverage.h  MathHelpers.h  Matrix.cpp  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  main.cpp
resources/: PosCol3D.fx  PosCol3D_PartialCoverage.fx
